--- a/RS Security Center/packages.config
+++ b/RS Security Center/packages.config
@@ -1,38 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DockPanelSuite" version="3.0.6" targetFramework="net48" />
-  <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net48" />
+  <package id="Azure.Core" version="1.37.0" targetFramework="net48" />
+  <package id="DockPanelSuite" version="3.1.0" targetFramework="net48" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.1.0" targetFramework="net48" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net48" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.42" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.51" targetFramework="net48" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net48" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.42" targetFramework="net48" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.110" targetFramework="net48" />
-  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.0.110" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.51" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.1.45" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.1.45" targetFramework="net48" />
+  <package id="Microsoft.Identity.Client" version="4.58.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.Web.WebView2" version="1.0.1054.31" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.2.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Targets" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="17.8.222" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Threading" version="17.8.14" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="17.8.14" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Validation" version="17.8.8" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2210.55" targetFramework="net48" />
   <package id="Microsoft.Web.Xdt" version="3.1.0" targetFramework="net48" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2022.7.53" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2023.6.56" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NuGet.Client" version="4.2.0" targetFramework="net48" />
-  <package id="NuGet.Common" version="5.9.1" targetFramework="net48" />
-  <package id="NuGet.Configuration" version="5.9.1" targetFramework="net48" />
+  <package id="NuGet.Common" version="6.8.0" targetFramework="net48" />
+  <package id="NuGet.Configuration" version="6.8.0" targetFramework="net48" />
   <package id="NuGet.ContentModel" version="4.2.0" targetFramework="net48" />
-  <package id="NuGet.Frameworks" version="5.9.1" targetFramework="net48" />
-  <package id="NuGet.Packaging" version="5.9.1" targetFramework="net48" />
-  <package id="NuGet.Packaging.Core" version="5.9.1" targetFramework="net48" />
-  <package id="NuGet.Packaging.Core.Types" version="4.2.0" targetFramework="net48" />
-  <package id="NuGet.Protocol" version="5.9.1" targetFramework="net48" />
+  <package id="NuGet.Frameworks" version="6.8.0" targetFramework="net48" />
+  <package id="NuGet.Packaging" version="6.8.0" targetFramework="net48" />
+  <package id="NuGet.Protocol" version="6.8.0" targetFramework="net48" />
   <package id="NuGet.Repositories" version="4.2.0" targetFramework="net48" />
   <package id="NuGet.RuntimeModel" version="4.2.0" targetFramework="net48" />
-  <package id="NuGet.Versioning" version="5.9.1" targetFramework="net48" />
+  <package id="NuGet.Versioning" version="6.8.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Composition" version="8.0.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Memory.Data" version="8.0.0" targetFramework="net48" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Private.Uri" version="4.3.2" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.Cng" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.Pkcs" version="5.0.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Pkcs" version="8.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
-  <package id="XrmToolBoxPackage" version="1.2022.5.56" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.1" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="XrmToolBoxPackage" version="1.2023.10.67" targetFramework="net48" />
 </packages>
